feat(storefront): Enhance destination search functionality with new components and API integration
- Added DestinationSearchModal and related hooks for improved user experience in selecting destinations.
- Integrated Vietnamese Administrative Units API for accurate city and province data.
- Implemented fallback mechanisms to ensure reliability in case of API failures.
- Updated various components to utilize the new destination search features.